# readmatrix

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/readmatrix/: __init__.py  cli.py  config.py  conversation.py  eval.py  main.py  middleware.py  models.py  qa.py  reranker.py  retriever.py
backend/readmatrix/api/: routes.py
backend/readmatrix/indexer/: __init__.py  database.py  embedder.py  manager.py  vectorstore.py
backend/readmatrix/vault/: __init__.py  chunker.py  parser.py  scanner.py
backend/tests/: test_api_ask.py  test_conversation.py
docs/plans/: 2026-03-04-reading-debate-design.md
frontend/: .dockerignore  Dockerfile  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/assets/css/: tailwind.css
frontend/components/chat/: ChatInput.vue  ChatPanel.vue  HistorySidebar.vue  MessageBubble.vue
frontend/components/citation/: CitationPanel.vue
frontend/components/ui/: Button.vue  Card.vue  Input.vue  Logo.vue  ScrollArea.vue  Textarea.vue
frontend/composables/: useChat.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
